--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -6,3 +6,11 @@ boardhole.logging.enabled=false
 spring.test.randomPort=true
 logging.level.root=WARN
 logging.level.dev.xiyo.bunnyholes.boardhole=INFO
+
+# 인메모리 H2 데이터베이스 사용 설정
+spring.datasource.url=jdbc:h2:mem:boardhole;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
