--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.5.5'
+    id 'org.springframework.boot' version '4.0.1'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'com.github.ben-manes.versions' version '0.52.0'
+    id 'org.openrewrite.rewrite' version '6.26.0'
 }
 
 // 아래 속성들은 gradle.properties에서 자동으로 참조됩니다:
@@ -30,17 +31,18 @@ repositories {
 dependencies {
 
     // -- Core Spring Boot Starters --
+    implementation 'org.springframework.boot:spring-boot-starter-classic'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-aspectj'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     // Email dependencies removed - will be replaced with JWT-based email verification later
     // implementation 'org.springframework.boot:spring-boot-starter-mail'
 
     // -- View (Thymeleaf) --
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.3.RELEASE'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
     // -- Development Tools --
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -82,6 +84,7 @@ dependencies {
 
     // -- Testing --
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test-classic'
 
     testImplementation 'org.springframework.security:spring-security-test'
 
@@ -200,4 +203,13 @@ processResources {
 // JAR 파일 이름에 버전 포함
 bootJar {
     archiveFileName = "${project.name}-${project.version}.jar"
+}
+
+// OpenRewrite configuration for Spring Boot 4 migration
+rewrite {
+    activeRecipe("org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0")
+}
+
+dependencies {
+    rewrite("org.openrewrite.recipe:rewrite-spring:6.21.0")
 }
