--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -12,5 +12,5 @@ spring:
         dialect: org.hibernate.dialect.H2Dialect
   autoconfigure:
     exclude:
-      - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
-      - org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
+      - org.springframework.boot.data.redis.autoconfigure.DataRedisAutoConfiguration
+      - org.springframework.boot.session.autoconfigure.SessionAutoConfiguration
