feat: 계층형 댓글 시스템 구현 (Adjacency List + CTE)
PostgreSQL Recursive CTE를 사용한 계층형 댓글 시스템 구현
- Adjacency List 모델로 부모-자식 관계 저장
- 재귀 CTE로 댓글 트리 조회 최적화
- 최대 5단계 깊이 제한

SSR 기반 UI 구현
- URL 파라미터로 폼 표시 제어 (?replyTo, ?editReply)
- 폼 제출 후 #reply-{id} 앵커로 스크롤 위치 유지
- scroll-margin-top으로 헤더 가림 방지
- JavaScript 없이 순수 서버사이드 렌더링

주요 변경사항
- Reply 도메인 및 CQRS 구조 추가
- ReplyRepository에 Native Query로 CTE 구현
- ReplyViewController로 폼 제출 처리 및 리다이렉트
- PermissionEvaluator에 REPLY 권한 추가
- 단위 테스트 추가

--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:17-alpine
-    container_name: boardhole-postgres
+    container_name: boardhole-cte-postgres
     ports:
       - "5432"
     environment:
@@ -19,7 +19,7 @@ services:
   
   redis:
     image: redis:7-alpine
-    container_name: boardhole-redis
+    container_name: boardhole-cte-redis
     ports:
       - "6379"
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
