--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
   docker:
     compose:
       file: docker-compose.infra.yml
+      skip:
+        in-tests: true
   
   # MVC 설정
   mvc:
